1) Increase Jetty perm gen space 2) Add uri map